logs/udac_example_dag/Stage_events/2019-01-12T16:00:00+00:00/2.log
[2021-02-04 14:27:20,605] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Stage_events 2019-01-12T16:00:00+00:00 [queued]>
[2021-02-04 14:27:20,613] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Stage_events 2019-01-12T16:00:00+00:00 [queued]>
[2021-02-04 14:27:20,613] {taskinstance.py:880} INFO - 
--------------------------------------------------------------------------------
[2021-02-04 14:27:20,613] {taskinstance.py:881} INFO - Starting attempt 2 of 4
[2021-02-04 14:27:20,613] {taskinstance.py:882} INFO - 
--------------------------------------------------------------------------------
[2021-02-04 14:27:20,617] {taskinstance.py:901} INFO - Executing <Task(StageToRedshiftOperator): Stage_events> on 2019-01-12T16:00:00+00:00
[2021-02-04 14:27:20,623] {standard_task_runner.py:54} INFO - Started process 57945 to run task
[2021-02-04 14:27:20,654] {standard_task_runner.py:77} INFO - Running: ['airflow', 'run', 'udac_example_dag', 'Stage_events', '2019-01-12T16:00:00+00:00', '--job_id', '179', '--pool', 'default_pool', '--raw', '-sd', 'DAGS_FOLDER/udac_example_dag.py', '--cfg_path', '/var/folders/ys/hb038j3904j77l4dkb4zk2ym0000gq/T/tmp6n713sh3']
[2021-02-04 14:27:20,655] {standard_task_runner.py:78} INFO - Job 179: Subtask Stage_events
[2021-02-04 14:27:20,674] {logging_mixin.py:112} INFO - Running <TaskInstance: udac_example_dag.Stage_events 2019-01-12T16:00:00+00:00 [running]> on host 1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa
[2021-02-04 14:27:20,686] {stage_redshift.py:56} INFO - StageToRedshiftOperator not implemented yet
[2021-02-04 14:27:20,738] {stage_redshift.py:61} INFO - Clearing data from destination Redshift table: staging_events
[2021-02-04 14:27:20,740] {base_hook.py:89} INFO - Using connection to: id: redshift. Host: redshift-cluster-airflow.ca3iipyjqhur.us-west-2.redshift.amazonaws.com, Port: 5439, Schema: dev, Login: awsuser, Password: XXXXXXXX, extra: None
[2021-02-04 14:27:22,058] {dbapi_hook.py:176} INFO - DELETE FROM staging_events IF EXISTS
[2021-02-04 14:27:22,431] {taskinstance.py:1150} ERROR - syntax error at or near "IF"
LINE 1: DELETE FROM staging_events IF EXISTS
                                   ^
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 984, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/Users/trevorransom/Documents/01 Coding/03 Data Engineering/Udacity/05 Airflow/plugins/operators/stage_redshift.py", line 62, in execute
    redshift.run('DELETE FROM {} IF EXISTS'.format(self.table))
  File "/usr/local/lib/python3.9/site-packages/airflow/hooks/dbapi_hook.py", line 177, in run
    cur.execute(s)
psycopg2.errors.SyntaxError: syntax error at or near "IF"
LINE 1: DELETE FROM staging_events IF EXISTS
                                   ^

[2021-02-04 14:27:22,434] {taskinstance.py:1187} INFO - Marking task as UP_FOR_RETRY. dag_id=udac_example_dag, task_id=Stage_events, execution_date=20190112T160000, start_date=20210204T122720, end_date=20210204T122722
[2021-02-04 14:27:25,622] {local_task_job.py:102} INFO - Task exited with return code 1
